# claude-applet

./: CLAUDE.md  Cargo.toml  README.md  justfile
i18n/en/: claude_applet.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  claude.rs  claude_monitor.rs  main.rs  utils.rs
