[package]
name = "claude-applet"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "An application to trace Claude's account plan usage"
repository = "https://github.com/jrdx0/claude-applet"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
hex = "0.4.3"
i18n-embed-fl = "0.10"
log = "0.4.29"
rand = "0.9.2"
reqwest = {version = "0.13.1", features = ["json"]}
rust-embed = "8.7.2"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.148"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1.3"
webbrowser = "1.0.6"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
